[gd_scene load_steps=2 format=3 uid="uid://bsrveme55mw0k"]

[ext_resource type="Script" path="res://UI/Dialogue/DialogueText.gd" id="1_6bksc"]

[node name="DialogueWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialoguePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -136.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel" groups=["DialogueText"]]
layout_mode = 2
script = ExtResource("1_6bksc")

[node name="TypeTimer" type="Timer" parent="DialoguePanel/DialogueText"]
wait_time = 0.1

[connection signal="timeout" from="DialoguePanel/DialogueText/TypeTimer" to="DialoguePanel/DialogueText" method="_on_type_timer_timeout"]
